# GeoVI

./: .gitignore  CMakeLists.txt  README.md
GeoVI/: Gem.h  Voronoi.h  algorithm.cpp  algorithm.h  convert.cpp  convert.h  experiment.h  gem.h  geomap.cpp  geomap.h  language.h  mechanism.cpp  mechanism.h  reader.cpp  reader.h  semantic_tree.xml  voronoi.cpp  voronoi.h  writer.cpp  writer.h
docs/: Convert_between_coordinate_system_in_GeoVI.MD  Geographic_knowledge_extraction_and_semantic_similarity_in_OpenStreetMap.md  S-GeoGI.md  融合语义位置的差分私有位置隐私保护方法.md
scripts/: dataset_split.py  map_visualize.py
test/: test.cc  test_algorithm.cpp  test_converter.cc  test_map.cc  test_voronoi.cc
